# uvicelec590

./: README  README.md
client/: ofs_client
client/elec590_ofs/: .anjuta_sym_db.db  Makefile.in  configure  configure.ac
client/elec590_ofs/.anjuta/session/: anjuta.session  dock-layout.xml
client/elec590_ofs/Debug/: Makefile  config.status  libtool
client/elec590_ofs/Debug/po/: Makefile  Makefile.in
client/elec590_ofs/Debug/src/: Makefile
client/elec590_ofs/autom4te.cache/: output.0  output.1  requests  traces.1
client/elec590_ofs/src/: main.c  recur_list_file.h
doc/: ELEC590  Project PPT.pptx  HOWTO  Online File Storage Project Plan.xmind  Readme (OFS).docx
elec590_ofs/Debug/: config.h
elec590_ofs/Debug/src/: elec590_ofs
elec590_ofs/Debug/src/.deps/: main.Po
elec590_ofs/autom4te.cache/: requests
elec590_ofs/src/: main.c  main.c~
poc/: README  TESTFILE  aaa  aaa.c  add.c  addcommit  addcommit.c  auth  auth.c  checkout  checkout.c  client  client.c  compare  compare.c  create_dir  getver  getver.c  gtkex  gtkex.c  init_rep  init_rep.c  init_user  init_user.c  loginfo  loginfo.c  new_init  new_init.c  ofs_client  ofs_client.c  ofs_server  ofs_server.c  register  register.c  server  server.c  testfile  testfile02
poc/elec590_ofs/: .anjuta_sym_db.db
poc/elec590_ofs/autom4te.cache/: requests  traces.0
poc/elec590_ofs/src/: Makefile.am  Makefile.in  elec590_ofs.ui  elec590_ofs.ui~  main.c  main.c~
server/: addcommit.h  cacert.pem  create_full_directory.h  ofs_server  ofs_server.c  privkey.pem  recur_list_file.h
(+10 files in other folders)
